cmake_minimum_required(VERSION 3.12)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(exo-20181103 prepa1/exo-20181103/main.c prepa1/exo-20181103/bar.h prepa1/exo-20181103/foo.h prepa1/exo-20181103/bar.c)
add_executable(exo-20181104 prepa1/exo-20181104/main.c prepa1/exo-20181104/bar.h prepa1/exo-20181104/foo.h)